--- a/reservation/src/main/webapp/resources/css/style.css
+++ b/reservation/src/main/webapp/resources/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
 	font-family: "Naver booking Icons";
-	src: url('../font/font/Naver-booking-Icons.woff') format('woff');
+	src: url('../font/Naver-booking-Icons.woff') format('woff');
 	font-weight: 400;
 	font-style: normal
 }
@@ -13,7 +13,7 @@
 
 @font-face {
 	font-family: "Naver Icons";
-	src: url('../font/font/Naver-Icons.woff') format('woff');
+	src: url('../font/Naver-Icons.woff') format('woff');
 	font-weight: 400;
 	font-style: normal
 }
