--- a/reservation/src/main/webapp/resources/css/style.css
+++ b/reservation/src/main/webapp/resources/css/style.css
@@ -117,12 +117,12 @@
 }
 
 .blind {
-    position: absolute;
-    overflow: hidden;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    clip: rect(0 0 0 0);
+	position: absolute;
+	overflow: hidden;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	clip: rect(0, 0, 0, 0);
 }
 
 body, html {
@@ -1413,6 +1413,29 @@ button {
 	-webkit-box-sizing: border-box;
 	moz-box-sizing: border-box;
 	box-sizing: border-box
+}
+
+.visual_txt_inn .visual_txt_tit {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	left: 0;
+	right: 0;
+}
+
+.visual_txt_tit .product_description {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 48%;
+	font-size: 0.6em;
+	max-height: 46px;
+	line-height: 23px;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
+	padding: 0 30px;
 }
 
 .bottom_common_path {
