이미지슬라이드개편&접기,펴기버튼추가

--- a/reservation/src/main/webapp/resources/css/style.css
+++ b/reservation/src/main/webapp/resources/css/style.css
@@ -2248,7 +2248,7 @@ button {
 	-webkit-line-clamp: 3;
 	-webkit-box-orient: vertical;
 	text-overflow: ellipsis;
-	display: -webkit-box !important
+	display: -webkit-box
 }
 
 .section_store_details .store_details .dsc {
